--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -5,16 +5,15 @@
 {% block title %}{{ block.super}}: {% trans "Edit course" %}{% endblock %}
 {% block view_tag %}edit-course{% endblock %}
 
+{% block breadcrumblist %}
+{{ block.super }}
+{% block editbreadcrumblist %}
+<li><a href="{{ instance|url:'course-edit' }}">{% trans "Edit course" %}</a></li>
+{% endblock %}
+{% endblock %}
+
 {% block columns %}
-<div class="col-md-10">
-    <ol class="breadcrumb">
-        {% block breadcrumb %}
-        <li><a href="{{ instance|url }}">{% trans "Home" %}</a></li>
-        <li><a href="{{ instance|url:'course-edit' }}">{% trans "Edit course" %}</a></li>
-        {% endblock %}
-    </ol>
-
+<div class="col-md-12">
     {% block coursecontent %}{% endblock %}
-
 </div>
 {% endblock %}
