--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -4,6 +4,10 @@
 
 {% block view_tag %}exercise{% endblock %}
 
+{% block exercisebreadcrumblist %}
+<li class="active">{{ exercise }}</li>
+{% endblock %}
+
 {% block exercisecontent %}
 
 {{ page.content|safe }}
