--- a/course/templates/course/_course_dropdown_menu.html
+++ b/course/templates/course/_course_dropdown_menu.html
@@ -1,15 +1,9 @@
 {% load i18n %}
 {% load course %}
 {% for ci in instances %}
-<li>
+<li role="presentation">
 	<a href="{{ ci|url }}">
     	{{ ci.course }}
     </a>
 </li>
 {% endfor %}
-<li class="divider"></li>
-<li>
-	<a href="{% url 'archive' %}">
-		{% trans "Course archive" %}
-	</a>
-</li>
