--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -2,92 +2,82 @@
 {% load course %}
 {% load external_services %}
 
-<h4>{% trans "Course" %}</h4>
-<ul class="nav nav-pills nav-stacked">
-    <li class="menu-home">
-    	<a href="{{ instance|url }}">
-	        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-	        {% trans "Home" %}
-    	</a>
-    </li>
-    <li class="menu-results">
-    	<a href="{{ instance|url:'results' }}">
-	        <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-	        {% trans "My results" %}
-	    </a>
-	</li>
-    <li class="menu-profile">
-        <a href="{{ instance|url:'profile' }}">
-            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-            {{ user.userprofile.shortname }}
-        </a>
-    </li>
-</ul>
+<li role="presentation" class="header"><h4>{% trans "Course" %}</h4></li>
+<li role="presentation" class="menu-home">
+	<a href="{{ instance|url }}">
+        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+        {{ course.code }}
+	</a>
+</li>
+<li role="presentation" class="menu-results">
+	<a href="{{ instance|url:'results' }}">
+        <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+        {% trans "My results" %}
+    </a>
+</li>
+<li role="presentation" class="menu-profile">
+    <a href="{{ instance|url:'profile' }}">
+        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+        {{ user.userprofile.shortname }}
+    </a>
+</li>
+{% if logout and user.is_authenticated %}
+<li role="presentation">
+    <a href="{% url 'logout' %}">
+        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+        {% trans "Log out"%}
+    </a>
+</li>
+{% endif %}
 
 {% external_menu_entries instance.pk as entries %}
 {% if entries|length > 0 %}
-<h4>{% trans "External" %}</h4>
-<ul class="nav nav-pills nav-stacked">
-    {% for menu_entry in entries %}
-    <li>
-        <a href="{{ menu_entry.url }}" target="_blank">
-            <span class="glyphicon glyphicon-{{ menu_entry.icon_class }}" aria-hidden="true"></span>
-            {{ menu_entry.label }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+<li role="presentation" class="header"><h4>{% trans "External" %}</h4></li>
+{% for menu_entry in entries %}
+<li>
+    <a href="{{ menu_entry.url }}" target="_blank">
+        <span class="glyphicon glyphicon-{{ menu_entry.icon_class }}" aria-hidden="true"></span>
+        {{ menu_entry.label }}
+    </a>
+</li>
+{% endfor %}
 {% endif %}
 
 {% if instance.tabs.exists %}
-<h4>{% trans "Apps" %}</h4>
-<ul class="nav nav-pills nav-stacked">
-    {% for tab in instance.tabs.all %}
-    <li class="menu-tab{{ tab.id }}">
-        <a href="{% url 'apps-tab' course=course.url instance=instance.url tab_id=tab.id %}">
-            <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-            {{ tab.label }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+<li role="presentation" class="header"><h4>{% trans "Apps" %}</h4></li>
+{% for tab in instance.tabs.all %}
+<li role="presentation" class="menu-tab{{ tab.id }}">
+    <a href="{% url 'apps-tab' course=course.url instance=instance.url tab_id=tab.id %}">
+        <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
+        {{ tab.label }}
+    </a>
+</li>
+{% endfor %}
 {% endif %}
 
 {% if is_course_staff %}
-<h4>{% trans "Course staff" %}</h4>
-<ul class="nav nav-pills nav-stacked">
-    <li class="menu-all-results">
-    	<a href="{{ instance|url:'all-results' }}">
-    		<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
-    		{% trans "All results" %}
-    	</a>
-    </li>
-    {% if is_teacher %}
-    <li class="menu-edit-course">
-        <a href="{{ instance|url:'course-edit' }}">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            {% trans "Edit course" %}
-        </a>
-    </li>
-    {% endif %}
-    {% external_staff_menu_entries instance.pk is_assistant is_teacher as entries %}
-    {% for menu_entry in entries %}
-    <li>
-        <a href="{{ menu_entry.url }}" target="_blank">
-            <span class="glyphicon glyphicon-{{ menu_entry.icon_class }}" aria-hidden="true"></span>
-            {{ menu_entry.label }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+<li role="presentation" class="header"><h4>{% trans "Course staff" %}</h4></li>
+<li role="presentation" class="menu-all-results">
+	<a href="{{ instance|url:'all-results' }}">
+		<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+		{% trans "All results" %}
+	</a>
+</li>
+{% if is_teacher %}
+<li role="presentation" class="menu-edit-course">
+    <a href="{{ instance|url:'course-edit' }}">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        {% trans "Edit course" %}
+    </a>
+</li>
 {% endif %}
-
-<div class="calendar-view">
-    <h4>{% trans "Calendar" %}</h4>
-    <p>[Placeholder for a visual calendar]</p>
-    <p>
-        <a href="{{ instance|url:'export-calendar' }}">
-            <small>{% trans "Download calendar (ics)" %}</small>
-        </a>
-    </p>
-</div>
+{% external_staff_menu_entries instance.pk is_assistant is_teacher as entries %}
+{% for menu_entry in entries %}
+<li role="presentation">
+    <a href="{{ menu_entry.url }}" target="_blank">
+        <span class="glyphicon glyphicon-{{ menu_entry.icon_class }}" aria-hidden="true"></span>
+        {{ menu_entry.label }}
+    </a>
+</li>
+{% endfor %}
+{% endif %}
