--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -1,21 +1,54 @@
 {% extends "base.html" %}
+{% load i18n %}
+{% load course %}
 
 {% block title %}{{ course.name }}{% endblock %}
 
 {% block content %}
 <div class="row">
-    <div class="col-md-2">
-        {% include "course/_course_menu.html" %}
+    <div class="col-sm-2 hidden-xs">
+        <nav class="course-menu">
+            <ul class="nav nav-pills nav-stacked">
+                {% include "course/_course_menu.html" with logout=False %}
+            </ul>
+        </nav>
+
+        <div class="calendar-view">
+            <h4>{% trans "Calendar" %}</h4>
+            <div id="study-calendar"></div>
+            <p>
+                <a href="{{ instance|url:'export-calendar' }}">
+                    <small>{% trans "Download calendar (ics)" %}</small>
+                </a>
+            </p>
+        </div>
     </div>
-    {% block columns %}
-    <div class="col-md-8">
-        {% block coursecontent %}
+    <div class="col-sm-10">
+        {% block siblings %}{% endblock %}
+        {% block breadcrumb %}
+        <ol class="breadcrumb">
+            {% block breadcrumblist %}
+            <li><a href="{{ instance|url }}">{{ course.code }}</a></li>
+            {% endblock %}
+        </ol>
         {% endblock %}
+        <div class="row">
+            {% block columns %}
+            <div class="col-md-9">
+                {% block coursecontent %}
+                {% endblock %}
+            </div>
+            <div class="col-md-3">
+                {% block sidecontent %}
+                {% endblock %}
+            </div>
+            {% endblock %}
+        </div>
     </div>
-    <div class="col-md-2">
-        {% block sidecontent %}
-        {% endblock %}
-    </div>
-    {% endblock %}
 </div>
+{% endblock %}
+
+{% block mobilemenu %}
+{{ block.super }}
+{% include "course/_course_menu.html" with logout=True %}
 {% endblock %}
