--- a/course/templates/course/toc.html
+++ b/course/templates/course/toc.html
@@ -1,11 +1,14 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
 {% load course %}
+{% load exercise %}
 {% load apps %}
 
 {% block view_tag %}home{% endblock %}
+{% block breadcrumb %}{% endblock %}
 
 {% block coursecontent %}
+{% if instance.has_chapters %}
 <ul>
     {% for module in instance.course_modules.all %}
     {% if module.chapters.exists or module.learning_objects.exists %}
@@ -17,7 +20,10 @@
             {% else %}
             {{ module }}
             {% if is_course_staff %}
-            <a class="btn btn-default btn-xs" href="{{ module|url }}">{% trans "Staff access" %}</a>
+            <a class="btn btn-default btn-xs" href="{{ module|url }}">
+                <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+                {% trans "Early access" %}
+            </a>
             {% endif %}
             {% endif %}
         </h3>
@@ -32,7 +38,10 @@
                 {% else %}
                 {{ chapter }}
                 {% if is_course_staff %}
-                <a class="btn btn-default btn-xs" href="{{ chapter|url }}">{% trans "Staff access" %}</a>
+                <a class="btn btn-default btn-xs" href="{{ chapter|url }}">
+                    <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+                    {% trans "Early access" %}
+                </a>
                 {% endif %}
                 {% endif %}
             </li>
@@ -47,7 +56,10 @@
                 {% else %}
                 {{ exercise }}
                 {% if is_course_staff %}
-                <a class="btn btn-default btn-xs" href="{{ exercise|url }}">{% trans "Staff access" %}</a>
+                <a class="btn btn-default btn-xs" href="{{ exercise|url }}">
+                    <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
+                    {% trans "Early access" %}
+                </a>
                 {% endif %}
                 {% endif %}
             </li>
@@ -59,9 +71,14 @@
     {% endif %}
     {% endfor %}
 </ul>
+{% else %}
+{% user_results %}
+{% endif %}
 {% endblock %}
 
 {% block sidecontent %}
+    {% category_points %}
+
     {% plugin_renderers user instance as plugins %}
     {% for plugin in plugins %}
         {{ plugin.render|safe }}
