--- a/edit_course/templates/edit_course/edit_model.html
+++ b/edit_course/templates/edit_course/edit_model.html
@@ -5,7 +5,7 @@
 
 {% block title %}{{ block.super}} / {% if object.id %}{% blocktrans with model=model_name id=object.id %}Edit {{ model }} ID {{ id }}{% endblocktrans %}{% else %}{% blocktrans with model=model_name %}Add new {{ model }}{% endblocktrans %}{% endif %}{% endblock %}
 
-{% block breadcrumb %}
+{% block editbreadcrumblist %}
 {{ block.super }}
 <li class="active">
     {% if object.id %}
@@ -40,7 +40,7 @@
                 {% trans "Fill in the URL and" %}
                 <a id="fetch-metadata" class="btn btn-primary btn-xs" href="#">
                     {% trans 'Download possible metadata' %}
-                    <span class="glyphicon glyphicon-download"></span>
+                    <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
                 </a>
             </p>
             <div id="metadata-progress" class="progress hide">
