--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -12,23 +12,22 @@
 	</head>
 	<body>
 		<div id="exercise">
-			<ul class="exercise-summary nav nav-tabs">
+			<ul class="exercise-summary nav nav-pills">
 				<li>
 					<a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url }}{% else %}#{% endif %}">
 						{% trans "Points" %}
-						<span class="{% if summary.get_submission_count > 0 %}label{% if summary.is_passed %} label-success{% endif %}{% endif %}">
-						{{ summary.get_points }}
-						</span>
-						/ {{ exercise.max_points }}
+						{% summary_points summary %}
 					</a>
 				</li>
 				<li class="dropdown">
 	    			<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 						{% trans "Submissions" %}
-						{{ summary.get_submission_count }}
-		    			{% if exercise.max_submissions %}
-		    			/ {{ exercise|max_submissions:profile }}
-		    			{% endif %}
+						<span class="badge">
+							{{ summary.get_submission_count }}
+			    			{% if exercise.max_submissions %}
+			    			/ {{ exercise|max_submissions:profile }}
+			    			{% endif %}
+						</span>
 	    				<b class="caret"></b>
 	    			</a>
 			        <ul class="dropdown-menu">
@@ -37,9 +36,7 @@
 			                <a href="{{ submission|url }}">
 			                    {{ forloop.revcounter }}.
 			                    {{ submission.submission_time }}
-			                    {% if submission.is_graded %}
-			                    {{ submission.grade }} / {{ exercise.max_points }}
-			                    {% endif %}
+			                    {% submission_points submission %}
 			                </a>
 			            </li>
 			        	{% empty %}
@@ -49,11 +46,24 @@
 			        	{% endfor %}
 			        </ul>
 				</li>
+				<li>
+					<p class="navbar-text navbar-btn">
+						<small>
+							{% if exercise.points_to_pass > 0 %}
+							{% blocktrans with points=exercise.points_to_pass %}{{ points }} points required to pass.{% endblocktrans %}
+							{% endif %}
+							{% trans "Deadline" %} {{ module.closing_time }}
+						</small>
+					</p>
+				</li>
 				{% if is_course_staff %}
 			    <li>
-			    	<a class="staff" href="{{ exercise|url:'submission-list' }}">
-						{% trans "View all submissions" %}
-					</a>
+					<p class="navbar-text navbar-btn">
+				    	<a class="btn btn-default btn-xs" href="{{ exercise|url:'submission-list' }}">
+							<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+							{% trans "View all submissions" %}
+						</a>
+					</p>
 				</li>
 				{% endif %}
 			</ul>
