--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
     </head>
     <body data-view-tag="{% block view_tag %}{% endblock %}">
         <div class="page-wrap">
-            <nav class="navbar navbar-default navbar-static-top">
+            <nav class="navbar navbar-inverse navbar-static-top">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false">
@@ -54,15 +54,14 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/">A+</a>
-                        {% if instance %}
-                        <a class="navbar-brand visible-xs" href="{{ instance|url }}">{{ instance.course }}</a>
-                        {% endif %}
+                        <a class="navbar-brand hidden-xs" href="/">A+</a>
+                        <span class="navbar-brand visible-xs">
+                        A+{% if instance %} &nbsp; {{ course.name }}{% endif %}
+                        </span>
                     </div>
-
                     <div class="collapse navbar-collapse" id="bs-navbar-collapse">
-                        <ul class="nav navbar-nav">
-                            <li class="dropdown">
+                        <ul class="nav navbar-nav hidden-xs">
+                            <li role="presentation" class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                     {% if instance %}
                                     {{ course }}
@@ -76,15 +75,21 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     {% course_menu %}
+                                    <li role="presentation" class="divider"></li>
+                                    <li role="presentation">
+                                    	<a href="{% url 'archive' %}">
+                                    		{% trans "Course archive" %}
+                                    	</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
+                        <ul class="nav navbar-nav navbar-right hidden-xs">
                             {% if user.is_authenticated %}
 
                             {% unread_notifications user as unread %}
                             {% if unread.count > 0 %}
-                            <li class="dropdown">
+                            <li role="presentation" class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                     <span class="glyphicon glyphicon-envelope text-danger" aria-hidden="true"></span>
                                     {% blocktrans with count=unread.count count_p=unread.count|pluralize %}
@@ -93,7 +98,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     {% for course_instance in unread.course_instances %}
-                                    <li>
+                                    <li role="presentation">
                                         <a href="{{ course_instance|url:'profile' }}">
                                             {{course_instance.instance_name}}
                                         </a>
@@ -103,13 +108,13 @@
                             </li>
                             {% endif %}
 
-                            <li>
+                            <li role="presentation">
                                 <a{% if instance %} href="{{ instance|url:'profile' }}"{% endif %}>
                                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                                     {{ user.username }}
                                 </a>
                             </li>
-                            <li>
+                            <li role="presentation">
                                 <a href="{% url 'logout' %}">
                                     <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
                                     {% trans "Log out"%}
@@ -117,6 +122,21 @@
                             </li>
 
                             {% endif %}
+                        </ul>
+
+                        {# Separate menu optimized for mobile users #}
+                        <ul class="nav navbar-nav visible-xs">
+                            {% course_menu %}
+                            {% block mobilemenu %}{% endblock %}
+                            <li role="presentation" class="divider"></li>
+                            <li role="presentation">
+                                <a href="/">{% trans "Home page" %}</a>
+                            </li>
+                            <li role="presentation">
+                            	<a href="{% url 'archive' %}">
+                            		{% trans "Course archive" %}
+                            	</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -138,7 +158,7 @@
                         {% block footercontent %}{% endblock %}
                         {% url 'privacy_policy' as policy_url %}
                         {% if policy_url %}
-                        <li><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
+                        <li role="presentation"><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
                         {% endif %}
                     </ul>
                 </div>
