--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -5,20 +5,20 @@
 <li role="presentation" class="header"><h4>{% trans "Course" %}</h4></li>
 <li role="presentation" class="menu-home">
 	<a href="{{ instance|url }}">
-        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
         {{ course.code }}
 	</a>
 </li>
 <li role="presentation" class="menu-results">
 	<a href="{{ instance|url:'results' }}">
-        <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
         {% trans "My results" %}
     </a>
 </li>
 <li role="presentation" class="menu-profile">
-    <a href="{{ instance|url:'profile' }}">
-        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-        {{ user.userprofile.shortname }}
+    <a href="{{ instance|url:'notifications' }}">
+        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+        {% trans "Notifications" %}
     </a>
 </li>
 {% if logout and user.is_authenticated %}
