--- a/templates/base.html
+++ b/templates/base.html
@@ -84,32 +84,10 @@
                                 </ul>
                             </li>
                         </ul>
+                        {% if user.is_authenticated %}
                         <ul class="nav navbar-nav navbar-right hidden-xs">
-                            {% if user.is_authenticated %}
-
-                            {% unread_notifications user as unread %}
-                            {% if unread.count > 0 %}
-                            <li role="presentation" class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    <span class="glyphicon glyphicon-envelope text-danger" aria-hidden="true"></span>
-                                    {% blocktrans with count=unread.count count_p=unread.count|pluralize %}
-                                    {{ count }} new notification{{ count_p }}
-                                    {% endblocktrans %}
-                                </a>
-                                <ul class="dropdown-menu">
-                                    {% for course_instance in unread.course_instances %}
-                                    <li role="presentation">
-                                        <a href="{{ course_instance|url:'profile' }}">
-                                            {{course_instance.instance_name}}
-                                        </a>
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </li>
-                            {% endif %}
-
-                            <li role="presentation">
-                                <a{% if instance %} href="{{ instance|url:'profile' }}"{% endif %}>
+                            <li role="presentation" class="menu-profile">
+                                <a href="{% url 'profile' %}">
                                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                                     {{ user.username }}
                                 </a>
@@ -120,9 +98,8 @@
                                     {% trans "Log out"%}
                                 </a>
                             </li>
-
-                            {% endif %}
                         </ul>
+                        {% endif %}
 
                         {# Separate menu optimized for mobile users #}
                         <ul class="nav navbar-nav visible-xs">
@@ -143,6 +120,7 @@
             </nav>
 
             <div class="site-content container">
+                {% notification_messages %}
                 {% include "_messages.html" %}
                 {% block content %}
                     <div class="error">
