--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand hidden-xs" href="/">A+</a>
+                        <a class="navbar-brand hidden-xs" href="{% url 'home' %}">A+</a>
                         <span class="navbar-brand visible-xs">
                         A+{% if instance %} &nbsp; {{ course.name }}{% endif %}
                         </span>
@@ -85,7 +85,7 @@
                             </li>
                         </ul>
                         {% if user.is_authenticated %}
-                        <ul class="nav navbar-nav navbar-right hidden-xs">
+                        <ul class="user-menu nav navbar-nav navbar-right hidden-xs">
                             <li role="presentation" class="menu-profile">
                                 <a href="{% url 'profile' %}">
                                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
@@ -105,14 +105,30 @@
                         <ul class="nav navbar-nav visible-xs">
                             {% course_menu %}
                             {% block mobilemenu %}{% endblock %}
-                            <li role="presentation" class="divider"></li>
+                            <li role="presentation" class="header"><h4>{% trans "Site" %}</h4></li>
                             <li role="presentation">
-                                <a href="/">{% trans "Home page" %}</a>
+                                <a href="{% url 'home' %}">
+                                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                                    {% trans "Home" %}
+                                </a>
                             </li>
                             <li role="presentation">
-                            	<a href="{% url 'archive' %}">
-                            		{% trans "Course archive" %}
-                            	</a>
+                                <a href="{% url 'archive' %}">
+                                    <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+                            	    {% trans "Course archive" %}
+                                </a>
+                            </li>
+                            <li role="presentation">
+                                <a href="{% url 'profile' %}">
+                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                            	    {{ user.username }}
+                                </a>
+                            </li>
+                            <li role="presentation">
+                                <a href="{% url 'logout' %}">
+                                    <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                            	    {% trans "Log out"%}
+                                </a>
                             </li>
                         </ul>
                     </div>
