Enclose exercise service content to an element.

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block exercisecontent %}
-
-{{ page.content|safe }}
-
+<div id="exercise">
+    {{ page.content|safe }}
+</div>
 {% include "exercise/_exercise_wait.html" %}
 {% endblock %}
 
