--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -69,9 +69,9 @@
 			</ul>
 			<div class="exercise-response">
 				{% include "_messages.html" %}
-
-				{{ page.content|safe }}
-
+				<div id="exercise">
+					{{ page.content|safe }}
+				</div>
 				{% include "exercise/_exercise_wait.html" %}
 			</div>
 		</div>
