--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -57,7 +57,9 @@
 {% endif %}
 
 {% if submission.feedback %}
-<div>{{ submission.feedback|safe }}</div>
+<div id="exercise">
+	{{ submission.feedback|safe }}
+</div>
 {% else %}
 <div class="alert alert-info">
 	{% trans "No grader feedback available for this submission." %}
