--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -2,6 +2,18 @@
 {% load course %}
 {% load exercise %}
 
+{% if categories|length > 1 %}
+<p class="filter-categories">
+    <small>{% trans "Filter view" %}:</small>
+    {% for category_summary in categories %}
+    <button class="btn btn-default btn-xs" data-category="{{ category_summary.category.id }}">
+        <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+        {{ category_summary.category.name }}
+    </button>
+    {% endfor %}
+</p>
+{% endif %}
+
 <p id="toggle-expired" class="hide"><a href="#">{% trans "Show older assignments." %}</a></p>
 
 {% for course_module, module_summary, uncategorized_exercise_level, category_level in exercise_tree %}
@@ -47,7 +59,7 @@
         <table class="table table-striped table-condensed">
             <tbody>
             	{% for category, categorized_exercise_level in category_level %}
-                <tr class="category-row">
+                <tr class="category-row" data-category="{{ category.id }}">
                     <td>{{ category.name }}</td>
                     {% if is_course_staff %}
                     <td>{% trans "Course staff" %}</td>
@@ -55,7 +67,7 @@
                     <td class="col-md-2">{% trans "Points" %}</td>
                 </tr>
                 {% for exercise, exercise_summary in categorized_exercise_level %}
-				<tr>
+				<tr data-category="{{ category.id }}">
                     <td>
                     	{% if after_open %}
                         <a href="{{ exercise|url }}">{{ exercise }}</a>
@@ -92,7 +104,7 @@
 
 <script>
 $(function() {
-	var limit = 1;
+	var limit = 0;
 	var expired = $(".module-expired");
 	if (expired.size() > limit) {
 		expired.slice(0, expired.size() - limit).hide();
@@ -103,5 +115,27 @@ $(function() {
 				$(this).parent().hide();
 			});
 	}
+
+    $('.filter-categories button').on("click", function(event) {
+        var button = $(this);
+        var id = button.attr("data-category");
+        if (button.hasClass("active")) {
+            button.removeClass("active")
+                .find("span").removeClass("glyphicon-unchecked").addClass("glyphicon-check");
+            $('.module-panel tr[data-category="' + id + '"]').removeClass("hide");
+        } else {
+            button.addClass("active")
+                .find("span").removeClass("glyphicon-check").addClass("glyphicon-unchecked");
+            $('.module-panel tr[data-category="' + id + '"]').addClass("hide");
+        }
+        $('.module-panel').each(function(index, panel) {
+            var mod = $(panel);
+            if (mod.find("tr:not(.hide)").size() > 0) {
+                mod.removeClass("hide");
+            } else {
+                mod.addClass("hide");
+            }
+        });
+    });
 });
 </script>
